[feat]: Enable clang-format
Details:
Adding clang-format to CMakeLists.txt, to enable code formatting.

Resolves:
 * Formatting

Tests:
 * Ran `make format` on the project

Signed-off-by: Ragu Manjegowda <raghavendrahm0410@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ project(playback)
 
 find_package(PCL 1.2 REQUIRED)
 
+# Including custom cmake rules
+include(cmake/clang-cxx-dev-tools.cmake)
+
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
